# rapier-ffi

./: Cargo.toml  LICENSE-APACHE  README.md  cbindgen.toml
.github/: build-ffi.yml  publish-java.yml
.github/workflows/: build-java.yml  build.yml  publish-java.yml
rapier-ffi/: Cargo.toml  README.md  cbindgen.toml
rapier-ffi/src/: ffi.rs  lib.rs  math.rs
rapier-ffi/src/control/: character_controller.rs  mod.rs  ray_cast_vehicle_controller.rs
rapier-ffi/src/dynamics/: ccd_solver.rs  integration_parameters.rs  island_manager.rs  mod.rs  rigid_body.rs  rigid_body_set.rs
rapier-ffi/src/dynamics/joint/: generic_joint.rs
rapier-ffi/src/dynamics/joint/impulse_joint/: impulse_joint.rs  impulse_joint_set.rs  mod.rs
rapier-ffi/src/dynamics/joint/multibody_joint/: mod.rs
rapier-ffi/src/geometry/: bounding_sphere.rs  broad_phase.rs  collider.rs  collider_set.rs  interaction_groups.rs  mod.rs  vhacd.rs
rapier-ffi/src/pipeline/: mod.rs  physics_pipeline.rs  query_pipeline.rs
rapier-ffi/src/shape/: mod.rs  trimesh.rs
rapier-java/: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  rapier-ffi  rapier_ffi  settings.gradle.kts
rapier-java/.github/workflows/: build.yml
rapier-java/build-logic/: build.gradle.kts  settings.gradle.kts
rapier-java/gradle/: libs.versions.toml  libs.versions.yml
rapier-java/rapier-java-dim2-f32/: build.gradle.kts
rapier-java/rapier-java-dim2-f64/: build.gradle.kts
rapier-java/rapier-java-dim3-f32/: build.gradle.kts
rapier-java/rapier-java-dim3-f64/: build.gradle.kts
rapier-java/rapier-java-headers/: build.gradle.kts
rapier-java/rapier-java-natives-linux-x86/: build.gradle.kts
rapier-java/rapier-java-natives-macos-x86/: build.gradle.kts
rapier-java/rapier-java-natives-windows-x86/: build.gradle.kts
rapier-java/rapier-java-sys/: build.gradle.kts
src/: ffi.rs  lib.rs  math.rs
src/data/: arena.rs
src/dynamics/: ccd_solver.rs  coefficient_combine_rule.rs  impulse_joint.rs  impulse_joint_set.rs  integration_parameters.rs  island_manager.rs  mod.rs  multibody_joint_set.rs  rigid_body.rs  rigid_body_set.rs
src/dynamics/joint/: generic_joint.rs  mod.rs  (+1 more)
src/geometry/: collider.rs  collider_set.rs  mod.rs  narrow_phase.rs
src/pipeline/: physics_pipeline.rs  query_pipeline.rs
src/shape/: mod.rs
(+2078 files in other folders)
