[package]
name = "rapier_ffi"
version = "0.1.0"
edition = "2018"
authors = ["aecsocket"]

[features]
default = []
dim2-f32 = ["dim2", "f32", "dep:parry2d",     "dep:rapier2d"]
dim2-f64 = ["dim2", "f64", "dep:parry2d-f64", "dep:rapier2d-f64"]
dim3-f32 = ["dim3", "f32", "dep:parry3d",     "dep:rapier3d"]
dim3-f64 = ["dim3", "f64", "dep:parry3d-f64", "dep:rapier3d-f64"]
# do not enable manually
dim2 = []
dim3 = []
f32 = []
f64 = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
bitflags = { version = "2.3.1", features = ["bytemuck"] }
itertools = "0.10.5"
rayon = "1.7.0"

parry2d      = { version = "0.13.4", optional = true, features = ["bytemuck-serialize"] }
rapier2d     = { version = "0.17.2", optional = true, features = ["simd-stable", "parallel"] }

parry2d-f64  = { version = "0.13.4", optional = true, features = ["bytemuck-serialize"] }
rapier2d-f64 = { version = "0.17.2", optional = true, features = ["simd-stable", "parallel"] }

parry3d      = { version = "0.13.4", optional = true, features = ["bytemuck-serialize"] }
rapier3d     = { version = "0.17.2", optional = true, features = ["simd-stable", "parallel"] }

parry3d-f64  = { version = "0.13.4", optional = true, features = ["bytemuck-serialize"] }
rapier3d-f64 = { version = "0.17.2", optional = true, features = ["simd-stable", "parallel"] }
